# Data-Structures-in-C-

./: .anjuta_sym_db.db  Makefile  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.ac  libtool
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: Makefile  config.h  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  lab6
Debug/src/.deps/: intDLLNode.Po  intDLList.Po  main.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: DLL.h~  Makefile  Makefile.am  Makefile.in  intDLLNode.cc  intDLLNode.cc~  intDLLNode.h  intDLLNode.h~  intDLList.cc  intDLList.cc~  intDLList.h  intDLList.h~  lab6  main.cc  main.cc~
src/.deps/: intDLLNode.Po  intDLList.Po  main.Po
